# storage/api-docs/api-docs.json
@@ -176,11 +176,11 @@
                 "tags": [
                     "مقالات"
                 ],
-                "summary": "دریافت مقالات در حال انتظار تایید",
-                "operationId": "1e73da29006174891857190a95f85bdc",
+                "summary": "دریافت مقالات در انتظار تایید",
+                "operationId": "fd7581adcf55a2738de117d9795b68e7",
                 "responses": {
                     "200": {
-                        "description": "لیست مقالات در حال انتظار تایید با موفقیت بازیابی شد."
+                        "description": "لیست مقالات در انتظار تایید با موفقیت بازیابی شد."
                     }
                 }
             }
@@ -640,9 +640,6 @@
                 "summary": "خروج کاربر",
                 "description": "این متد برای خروج کاربر و باطل کردن توکن JWT استفاده می‌شود.",
                 "operationId": "7a0bae8c78f2509099e07643fc2895ce",
-                "requestBody": {
-                    "required": false
-                },
                 "responses": {
                     "200": {
                         "description": "خروج موفقیت آمیز",
@@ -1003,108 +1000,126 @@
                 }
             }
         },
-        "/v1/notifications": {
+        "/api/v1/notifications": {
             "get": {
                 "tags": [
-                    "Notifications"
+                    "اعلانات"
                 ],
                 "summary": "دریافت اعلانات کاربر",
-                "operationId": "6637ad68030edb2819de6b2370b7ac7e",
+                "description": "این متد تمام اعلانات مربوط به کاربر را نمایش می‌دهد. با استفاده از پارامتر `is_read` می‌توان اعلانات را بر اساس خوانده شده یا نشده بودن فیلتر کرد.",
+                "operationId": "3bcce2782747db8b0c7a14103ce2b7f9",
+                "parameters": [
+                    {
+                        "name": "is_read",
+                        "in": "query",
+                        "description": "فیلتر وضعیت خوانده شده (0=خوانده نشده، 1=خوانده شده)",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "enum": [
+                                0,
+                                1
+                            ]
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "اعلانات با موفقیت دریافت شد"
+                        "description": "لیست اعلانات",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "OK"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "title": {
+                                                        "type": "string",
+                                                        "example": "خوش آمدید"
+                                                    },
+                                                    "description": {
+                                                        "type": "string",
+                                                        "example": "به سایت ما خوش آمدید"
+                                                    },
+                                                    "type": {
+                                                        "type": "string",
+                                                        "example": "wellcome"
+                                                    },
+                                                    "is_read": {
+                                                        "type": "boolean",
+                                                        "example": false
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "401": {
-                        "description": "کاربر احراز هویت نشده"
-                    },
-                    "403": {
-                        "description": "دسترسی ممنوع"
+                        "description": "Unauthorized"
                     }
                 }
             }
         },
-        "/v1/notifications/{id}/read": {
-            "put": {
+        "/api/v1/notifications/{id}/mark-as-read": {
+            "patch": {
                 "tags": [
-                    "Notifications"
+                    "اعلانات"
                 ],
-                "summary": "خواندن اعلان خاص",
-                "operationId": "303ca5ba3aa1044f86b48b48125ae33f",
+                "summary": "علامت‌گذاری اعلان به عنوان خوانده شده",
+                "description": "این متد یک اعلان خاص را برای کاربر به عنوان خوانده شده علامت‌گذاری می‌کند.",
+                "operationId": "e3cd1fdb329a05614dc4d36eaf05a18e",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "ID اعلان",
+                        "description": "شناسه اعلان",
                         "required": true,
                         "schema": {
-                            "type": "integer"
+                            "type": "integer",
+                            "example": 1
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "اعلان به عنوان خوانده شده علامت‌گذاری شد"
-                    },
-                    "404": {
-                        "description": "اعلان پیدا نشد"
-                    },
-                    "400": {
-                        "description": "این اعلان قبلاً خوانده شده است"
-                    }
-                }
-            }
-        },
-        "/v1/notifications/send": {
-            "post": {
-                "tags": [
-                    "Notifications"
-                ],
-                "summary": "ارسال اعلان",
-                "operationId": "b55fda9c988c2ac884431bd93ff98e2e",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "user_id",
-                                    "notification_id"
-                                ],
-                                "properties": {
-                                    "user_id": {
-                                        "type": "integer",
-                                        "example": 1
+                        "description": "اعلان به عنوان خوانده شده علامت‌گذاری شد",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "OK"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Notification marked as read"
+                                        }
                                     },
-                                    "notification_id": {
-                                        "type": "integer",
-                                        "example": 1
-                                    }
-                                },
-                                "type": "object"
+                                    "type": "object"
+                                }
                             }
                         }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "اعلان با موفقیت ارسال شد"
                     },
-                    "400": {
-                        "description": "خطاهای اعتبارسنجی رخ داد"
-                    }
-                }
-            }
-        },
-        "/v1/notifications/old": {
-            "delete": {
-                "tags": [
-                    "Notifications"
-                ],
-                "summary": "حذف اعلانات قدیمی",
-                "operationId": "241fe274a0e89e7f8d0e50cc4d84d067",
-                "responses": {
-                    "200": {
-                        "description": "اعلانات قدیمی با موفقیت حذف شد"
+                    "404": {
+                        "description": "اعلان یافت نشد"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     }
                 }
             }
@@ -1745,8 +1760,8 @@
             "description": "احراز هویت"
         },
         {
-            "name": "Notifications",
-            "description": "Notifications"
+            "name": "اعلانات",
+            "description": "اعلانات"
         },
         {
             "name": "پروفایل",
